[package]
name = "hackernews"
version = "0.1.0"
authors = ["PY0226H <pyh20010226@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-web = "0.6.3"


# Debug
dioxus-logger = "0.6.2"
tracing = "0.1.40"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
